// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses messages including "UNKNOWN SYNTAX" errors 1`] = `
Array [
  Object {
    "code": "",
    "message": "2583: <UNKNOWN SYNTAX ERROR>",
    "range": Object {
      "end": Object {
        "character": 74,
        "line": 29,
      },
      "start": Object {
        "character": 73,
        "line": 29,
      },
    },
    "severity": 1,
    "source": "refmt",
  },
]
`;

exports[`parses regular syntax error messages 1`] = `
Array [
  Object {
    "code": "",
    "message": "2146: syntax error, consider adding a \`;' before",
    "range": Object {
      "end": Object {
        "character": 22,
        "line": 41,
      },
      "start": Object {
        "character": 7,
        "line": 41,
      },
    },
    "severity": 1,
    "source": "refmt",
  },
]
`;
